# comp0034-cw2i-MakoaJerboa

./: README.md  githubrequirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/coursework2/: app.py  coursework2.md
src/coursework2/census/: coursework2_dash.py  figures.py  layout_elements.py
src/coursework2/tests/: conftest.py  test_coursework2_dash.py
