[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0034-cw"
version = "0.0.1"

# Refer to https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
[tool.setuptools.packages.find]
where = ["src"]
include = ["coursework*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-rA --verbose"

[tool.pytest.config]
rootpath = ["src"]